minor text fixes

--- a/tex/research_agenda_v2.tex
+++ b/tex/research_agenda_v2.tex
@@ -32,11 +32,11 @@
 
 \section{Introduction}
 
-This objective of this research project is predicting the consumer reaction to changes in the every day prices (EDP). Predicting how consumers will respond to EDP changes can help firms adjust their everyday prices to maximize sales volume, and revenue before and after promotions. The point of this project is to utilize multiple approaches to get as full a picture of consumer behavior as possible. In particular, it involves two approaches. This first is a dynamic program involves specifying  a recursive maximization problem to models consumer purchasing decisions. The dynamic program isolates the causal relationship between consumer behavior and EDP changes, however the results relate to the assumption of the model. The second involves a traditional econometric model. This leverages well understood statistical techniques to describe the relationship between EDP and consumer behavior. However, it does not identify causal relationships between the EDP and consumer behavior.
+This objective of this research project is predicting the consumer reaction to changes in the every day prices (EDP). Predicting how consumers will respond to EDP changes can help firms adjust their everyday prices to maximize sales volume, and revenue before and after promotions. The point of this project is to utilize multiple approaches to get as full a picture of consumer behavior as possible. In particular, this study involves two approaches. The first involves a traditional econometric model. This leverages well understood statistical techniques to describe the relationship between EDP and consumer behavior. However, it does not identify causal relationships between the EDP and consumer behavior. The second is a dynamic program, a recursive maximization problem that models consumer purchasing decisions. The dynamic program better identifies a causal relationship between consumer behavior and EDP changes, however the results are highly related to the assumption of the model.
 
 \subsection{Relevant Literature}
 
-Intuitively, manufacturers run trade promotions because they expect consumers to buy more while the price is low leveraging the way consumers perceive past and current prices. As a result, research into trade promotions centers around the question of how past prices relate to current purchasing decisions. Essentially, this project examines two mechanisms from the literature that describe how consumers consider past prices when making purchasing decisions.
+Intuitively, manufacturers run trade promotions because they expect consumers to buy more while the price is low. The amount sold during the promotion is related to the way consumers perceive past and current prices. As a result, research into trade promotions centers around the question of how past prices relate to current purchasing decisions. Essentially, this project examines two mechanisms from the literature that describe how consumers consider past prices when making purchasing decisions.
 
 The first way, involves consumer using past prices as reference as to whether or not the will reduce costs by buying the product. Essentially the past prices form heuristic for consumers trying to minimize their expenditures. Putler's 1991 paper works out theoretical treatment of reference prices \cite{putler}. More importantly, including the of effects of using past prices as a hueristic for savings lends itself well to an econometric model. The most cited paper including these effects is Winer's econometric model from 1986. His model he predicts probability consumers buy from a brand as a function of previous quantity sold, consumers price expectations, competitors' price and advertising spending.  \cite{winer}. Another model worth mentioning is Krishnamurthi and Raj's econometric model separate consumers' decisions about which brand to purchase and the quantity of the brand to buy into separate economic decisions \cite{krishnamurthi}. Each of these decisions is modeled using a separate econometric equations. 
 
@@ -44,17 +44,17 @@ The second way involves a more complex relationship between consumer behavior an
 
 \section{Econometric Model}
 
-The first approach to understanding consumer responses to EDP involves quantifying the statistical relationship between EDP and volume using an traditional econometric model.  Econometric models are a well established technique common tool in the literature. The statistical properties of such a model are well established. However, it does not peek at causality or how changing one of the input variables would be predicted to change volume. It just tells you about the relationship between them. That being said there is a lot of good information you can get from just looking at the statistical relationship. It shows what factors are relevant and what is not in terms of volume changes. This model, along with several variations have already been estimated as of the writing of this document. The results are included in the appendix.
+The first approach to understanding consumer responses to EDP involves quantifying the statistical relationship between EDP and volume using an traditional econometric model.  Econometric models are a well established technique. The statistical properties these models are well established. However, econometric models poorly identify causal relationships. Still, establishing a correlational relationship between product characteristics and volume can reveal factors relevant to volume changes.
 
 \subsection{Winer's Model}
 
-The model used is inspired by Winer's 1986 paper \cite{winer}. Winer estimates the probability buying a brand's product. His paper models purchase probabilities as a function of previous quantity sold, consumer price expectations, competitors' prices and advertising spending. Winer used data directly from the point of sale, so this project modifies Winer's model to use syndicated data from Nielson. Krishnamurthi and Raj's econometric model, provides a more nuanced model by breaking the decisions into a brand and purchase quantity decision. However the model relies on point of sales, as opposed to the cleaned syndicated data to predict brand loyalties . As a result, cannot replicate the brand loyalty calculations. Formally, Winer's model describes the probability of purchasing brand $i$ at time $t$. It takes into account past volumes, consumer price expectations, competitors price and advertising spending. It is given by the equation: \\
+Winer's 1986 paper inspired the model used in this project \cite{winer}. Krishnamurthi and Raj's econometric model, provides a more nuanced model by breaking consumer decisions about brand and purchase quantity into sepperate econometric equations. Like Winer, their model relies on point of sales data, as opposed to the cleaned syndicated data. However, the syndicated data cannot be used to emulate their approach. On the other hand, Winer's model can be adapted to use the syndicated data.
+
+Winer estimates the probability of buying a brands' product as a function of previous quantity sold, consumer price expectations, competitors' prices and advertising spending. Formally, Winer's model describes the probability of purchasing brand $i$ at time $t$. It takes into account past volumes, consumer price expectations, competitors price and advertising spending. It is given by the equation: \\
 
 $ {Pr(BRAND_i)}_{it} = \alpha_0 + \alpha_1 {VOL}_{it} + \alpha_2 {ADV}_{it} +  \alpha_3 PRICE\_REACT_{it}  \medskip + \alpha_4 \dfrac{PRICE_it}{TOTAL\_PRICE_{t}} + \epsilon_{it}$\\
 
-In Winer's model,
-
-$${Pr(BRAND_i)}_{it} $$ is a fitted variable. Before fitting it a boolean variable representing whether or not the brand was purchased at time $t$ before it is fit using the regression equation. This is a logistic regression. The data comes from the point of sale. If there are $j$ brands then there $j-1$ more data points are generated for all the brands that were not purchased. You know implicitly these brands were not purchased.
+$${Pr(BRAND_i)}_{it} $$ Winer's model is a logistic regression. The dependent variable is fit as a probability. Before fitting it a boolean variable representing whether or not the brand was purchased at time $t$. The data comes from the point of sale, so when the consumer makes a purchase, the consumer implicitly did not buy the other brands were not purchased. In other words, if there are $j$ brands then there $j-1$ more data points are generated for all the brands that were not purchased. 
 
 $$VOL_{it}$$ represents the volume at of brand $i$ at time $t$. Its coefficient represents the relationship between volume and purchase probability.
 
@@ -64,16 +64,15 @@ $$PRICE\_REACT_{it}$$ is meant to capture a reaction in the reference price. It 
 
 The most important part of the reaction is $$\widehat{PRICE}_{it}$$ which represents the consumers expectation for the price at the current time period period. It involves estimating ${PRICE}_{it}$ as a function of ${PRICE}_{it-1}$. This process is called two stage least squares. In two stage least squares, you look at the effect of one variable 'through' another variable.  In this case we are looking on how past prices effect the current price 'through' the current price. You do this by running running a regression using a variable called an instrument (in this case, previous price) on another variable (in this case price). You use the predicted values from the first regression in a second regression. This project uses this technique as well when estimating the model.
 
-$$ \dfrac{PRICE_it}{TOTAL\_PRICE_{t}}$$ represents the ratio between the price of brand $i$ at time $t$ against its competitors. It represents the overall pricing environment. It is the current brand price at time $t$ as a fraction of all the prices.
-
+$$ \dfrac{PRICE_{it}}{TOTAL\_PRICE_{t}}$$ represents the ratio between the price of brand $i$ at time $t$ against its competitors. It represents the overall pricing environment. It is the current brand price at time $t$ as a fraction of all the prices.
 
 \subsection{Model Description}
 
-The model emulates Winer's model. Although it does not include data on advertising expenditures we include boolean variables that describe the group to proxy for the fixed effects caused by each groups marketing departments. It includes terms for previous volume and terms for the ratio between each products price and its competitors prices. Finally, the model include past prices as variables. Like Winer, estimated models that take advantage of two stage least squares. These models include a term that represents how prices effect the volume changes through their relationship with previous prices. 
+The model in this study emulates Winer's model with several modifications to suit our data set. Instead of advertising expenditures we include group characteristic boolean variables to proxy for fixed effects caused by each groups marketing departments. Our model also include the ratio between each products volume and group volume. Like Winer, we estimated models using two stage least squares. These models include terms to represents how prices effect the volume changes through their relationship with previous prices.  This model, along with several variations have already been estimated as of the writing of this document. The results are included in the appendix.
 
 In order to take advantage of syndicated data, the model predicts percentage changes in the volume sold by group $i$ in consumer trade area (CTA) $j$ at time $t$. The estimated equations for this model are included in the appendix section:\\ 
 
-$ log(VOL_{ijt}) = \alpha_0 + \alpha_0 {PRICE}_{ijt} + \alpha_0 EDP_{ijt} + \sum_{i=3}^{11} \alpha_i {GROUP}_{ijt}  \medskip + \alpha_{12} {PRICE}_{ijt-1} + \alpha_{13} {PRICE}_{ijt-2}  \medskip + \alpha_{14}{VOL\_RATIO}_t  + \alpha_{15} {PRICE\_RATIO}_{t} + \alpha_{16} {VOL}_{ijt-1} + \alpha_{17} {VOL}_{ijt-2}  + \epsilon_{ijt}   $\\
+$ log(VOL_{ijt}) = \alpha_0 + \alpha_0 {PRICE}_{ijt} + \alpha_0 EDP_{ijt} + \sum_{k=3}^{11} \alpha_k {GROUP}_{ijt}  \medskip + \alpha_{12} {PRICE}_{ijt-1} + \alpha_{13} {PRICE}_{ijt-2}  \medskip + \alpha_{14}{VOL\_RATIO}_t  + \alpha_{15} {PRICE\_RATIO}_{t} + \alpha_{16} {VOL}_{ijt-1} + \alpha_{17} {VOL}_{ijt-2}  + \epsilon_{ijt}   $\\
 
 \subsection{Description of the Variables}
 
@@ -85,7 +84,7 @@ $${PRICE}_{ijt}, EDP_{ijt}$$
 
 The variable ${PRICE}_{ijt}$ is the price for CTA $j$ for product group $i$ at time $t$. The coefficient on price can be interpreted as the expected percentage change in volume corresponding to a 1 dollar increase in price all else equal. The variable $EDP_{ijt}$ is the everyday price for CTA $j$ in Group $i$ at time $t$. The coefficient on $EDP_{ijt}$ can be interpreted as the expected percentage change in volume corresponding to a 1 dollar increase in EDP all else equal.
 
-$$ \sum_{i=3}^{11} \alpha_i {GROUP}_{ijt} $$ 
+$$ \sum_{k=3}^{11} \alpha_k {GROUP}_{ijt} $$ 
 
 Are boolean variables describing the group characteristics. Their coefficients represented the fixed effects of these variables The characteristics looked at are whether or not the creamer was flavored, dairy-free, which of the five brands it belonged too. If all four brand boolean variables are zero, then the brand is BA. The coefficient on these variables can be interpreted as the fixed effects of brand on volume changes. Finally, there are variables that represent the size of the product. If all three boolean variables are zero then the product is 16 ounce units.
 
