minor text fixes

--- a/tex/research_agenda_v2.tex
+++ b/tex/research_agenda_v2.tex
@@ -32,15 +32,15 @@
 
 \section{Introduction}
 
-The objective of this research project is predicting the consumer reaction to changes in every day prices (EDP). Predicting how consumers will respond to EDP changes can help firms adjust their everyday prices to maximize sales volume, and revenue before and after promotions. The point of this project is to utilize multiple approaches to get as full a picture of consumer behavior as possible. In particular, this study involves two approaches. The first involves a traditional econometric model. This leverages well understood statistical techniques to describe the relationship between EDP and consumer behavior. However, it does not identify causal relationships between the EDP and consumer behavior. The second is a dynamic program, a recursive maximization problem that models consumer purchasing decisions. The dynamic program better isolates the causal relationship between consumer behavior and EDP changes, however the results are influenced by the assumption of the model.
+The objective of this research project is predicting the consumer reaction to changes in every day prices (EDP). Predicting how consumers will respond to EDP changes can help firms adjust their everyday prices to maximize sales volume and revenue before and after running promotions. The point of this project is to utilize multiple approaches to get as full a picture of consumer behavior as possible. In particular, this study involves two approaches. The first involves a traditional econometric model. This leverages well understood statistical techniques to describe the relationship between EDP and consumer behavior. However, it does not identify causal relationships between the EDP and consumer behavior. The second is a dynamic program, a recursive maximization problem that models consumer purchasing decisions. The dynamic program better isolates the causal relationship between consumer behavior and EDP changes, however the results are influenced by the assumption of the model.
 
 \subsection{Relevant Literature}
 
-Manufacturers run trade promotions because they expect consumers to buy more when price are low. The way consumers perceive past and current prices are what make a promotion effective. As a result, research into trade promotions asks about how past prices relate to current purchasing decisions.  This project examines two mechanisms from the literature that describe how consumers consider past prices when making purchasing decisions.
+Manufacturers run trade promotions because they expect consumers to buy more when price are low. The way consumers perceive past and current prices are what make promotions effective. As a result, research into trade promotions asks about how past prices relate to current purchasing decisions.  This project examines two mechanisms from the literature that describe how consumers consider past prices when making purchasing decisions.
 
-In the first way, consumer use past prices as reference when deciding whether or not to buy the product during the promotion. In this way, the past prices serve as a heuristic for consumers trying to minimize their expenditures. Putler's 1991 paper works out theoretical treatment of this mechanism \cite{putler}. More importantly, including the of effects of using past prices as a reference lends itself well to an econometric model. The most cited paper including these effects is Winer's econometric model from 1986. His model he predicts the probability consumers buy from a brand as a function of previous quantity sold, consumers price expectations, competitors' price and advertising spending.  \cite{winer}. Krishnamurthi and Raj's econometric model improves on Winer's model by separating consumers' decisions about which brand to purchase and the quantity of the brand to buy into separate economic decisions \cite{krishnamurthi}.
+In the first way, consumer use past prices as reference when deciding whether or not to buy the product during the promotion. In this way, the past prices serve as a heuristic signal for consumers to purchase with the intention of lowering their expenditures. Putler's 1991 paper works out theoretical treatment of this mechanism \cite{putler}. More importantly, including the of effects of using past prices as a reference lends itself well to an econometric model. The most cited paper including these effects is Winer's econometric model from 1986. His model predicts the probability pruchasing from a brand as a function of previous quantity sold, consumers price expectations, competitors' price and advertising spending.  \cite{winer}. Krishnamurthi and Raj's econometric model improves on Winer's model by separating the consumers decisions into two separate, and simultaneous economic decisions. Consumers simultameously decide which  brand to purchase and the quantity of the brand to buy  \cite{krishnamurthi}.
 
-In the second mechanism where past price affects purchases consumers use the past prices to form expectations about future prices. When they go to the supermarket, they devise a plan about when to make purchases based on their expectations for prices. For example, when prices are low the consumer may buy more. This is because they intend to buy less because they expect prices to go up. An econometric model is poorly suited to capture the effect of future price expectations because of the intertwined nature of prices and purchases. However, dynamic programming models can handle this scenario.   Ahn, Gumus and Kaminsky create a model for manufacturers facing demand that carries over between periods \cite{ahn}  In their model, consumers will wait until a future period for the price to fall. Gonul and Srinivasan specify a dynamic programming model where consumers make purchasing decisions by forming expectations about future prices dynamically \cite{gonul}. They estimate their model parameters by iterating between solving the model and estimating the model parameters using maximum likelihood estimation.
+In the second mechanism, consumers use past prices to form expectations about future prices. When consumers go to the supermarket, they devise a plan for future purchases based on their expectations for prices in the future. Under this mechanism, the consumer buys more when prices are low because they intend to buy less because they expect prices to go up. An econometric model is poorly suited to capture the effect these expectations because of the intertwined nature of future and present prices and purchases. The recursive framework of a dynamic programming models works well because past decisions effect future decisions. Ahn, Gumus and Kaminsky based on this principle \cite{ahn}  In their model, consumers will wait until a future period for the price to fall to save money. Their model focuses on manufacturers decisions in the face of demand carrying over between periods. On the other hand, Gonul and Srinivasan focused on consumer decisions. In their model, consumers make purchasing decisions by forming expectations about future prices dynamically \cite{gonul}. They estimate their model parameters by iterating between solving the model and estimating the model parameters using maximum likelihood estimation.
 
 \section{Econometric Model}
 
@@ -122,66 +122,53 @@ Using this process assumes that the past prices only relate to future volume cha
 
 \section{Dynamic Program}
 
-
-The second approach to predicting consumer reactions to EDP involves using a dynamic program to model how a consumer chooses a quantity of goods to buy. This model is designed to reflect a consumer reacting to EDP changes. Although the statistical properties are not as documented, changes in consumer behavior within the model can be attributed to changes in EDP changes.
-
-At its core, this problem involves minimizing the cost faced by consumers over multiple periods. The consumer considers past purchases, and expectations for future prices to simultaneously decide on a quantity to purchase and a plan for future purchases. The model parameters are estimated by iterating between solving the consumers' problem and a maximum likelihood estimation routine. 
+The second approach to predicting consumer reactions to EDP involves using a dynamic program to model how consumers chose quantities of goods to buy. The problem involves minimizing the cost faced by consumers over multiple periods. The consumer considers past purchases, and expectations for future prices to simultaneously decide on a quantity to purchase and a plan for future purchases. The model parameters are estimated by iterating between solving the consumers' problem and a maximum likelihood estimation routine. Although the statistical properties are not as documented, changes in consumer behavior within the model can be better attributed to changes in EDP.
 
 \section{Gonul and Srinivasan's Model}
 
-The consumer problem in this project is modeled after Gonul and Srinivasan model\cite{gonul}. Similar to Winer, they use data from the point of sale. They know which brand each household purchased and implicitly the brands that were not purchased. They seek to predict these purchases buy trying estimating associated costs of buying the product, and not buying the product. Their model is built on the premise that consumers anticipate future promotions and adjust their purchase behavior accordingly. Each time the consumer visits the store, they dynamically plan their future expenditures. By making these plans, they predict the total future costs of buying in future periods.
-
-In their model, the consumer predicts these future costs based on a recursive cost function $C(B_t) + \epsilon_{it}$. The argument to the cost function, $B_t$ is boolean variable that represents whether a brand was purchased at this visit. The $C(B_t)$ estimate the costs of buying or not buying and incurring a 'stock out' cost by not having the product on hand when it was need. Calculating $C(B_t)$ implicitly, plans the consumers future expenditures.
-
-Gonul and Srinivasan assume there is a stochastic component $\epsilon_{it}$ to the cost of buying. Their model is built on the premise that consumers anticipate future promotions and adjust their purchase behavior accordingly. The goal of the dynamic program is to predict all the values of $C(B_t)$ using the objective function below. Consumers try to minimize costs, which are discounted by $\delta$ in each period:
+The consumer problem in this project is modeled after Gonul and Srinivasan's paper\cite{gonul}. They seek to predict consumer purchases during by estimating the associated costs of buying the product, and the costs of waiting for a promotion and 'stocking out' in the interim. These costs are calculated using the premise that consumers anticipate future promotions and the savings associated with them. As a result, each time the consumer calculates the costs of buying or 'stocking out', they dynamically consider future costs. In their model, the consumer predicts these future costs based on a recursive cost function $C(B_t)$.  Similar to Winer, they use data from the point of sale. They know which brand each household purchased and implicitly the brands that were not purchased. The argument to the cost function, $B_t$ is boolean variable that represents whether a brand was purchased at this time. The goal of the dynamic program is to predict all the values of $C(B_t)$ using the objective function below. Consumers try to minimize costs, which are discounted by $\delta$ in each period
 
 $$\text{Minimize } E( \sum_t \delta^{t} C(B_t) + \epsilon_{it} )$$
 
-They estimate the parameters of their cost function $C(B_t)$ by estimating the probabilities of buying and not buying in a certain period using maximum likelihood estimation. Maximum likelihood estimation chooses parameters that maximize the probability of a the likelihood function. The construct this likelihood function of observing a set of purchases by calculating the probability of making the purchase in each period using $C(B_t)$. 
+
+Gonul and Srinivasan assume there is a stochastic component $\epsilon_{it}$ to the cost of buying in order to estimate the probabilities of buying and not buying in terms of $C(B_t)$. Their goal is specifying a likelihood function in terms of $C(B_t)$ and using maximum likelihood estimation to estimate the parameters if $C(B_t)$. In order to build a likelihood function, Gonul and Sriviansan estimate the probability of making purchase $Pr(B_t=1)$ is given below.
 
 $$Pr(B_t=1) = Pr(C(B_t = 1) + \epsilon_{1t} < C(B_t = 0) + \epsilon_{0t} )$$ 
 
-$$=  Pr(  \epsilon_{0t} + \epsilon_{1t} < C(B_t = 0) - C(B_t = 1) )   $$
+$$=  Pr(  \epsilon_{0t} + \epsilon_{1t} < C(B_t = 0) - C(B_t = 1) )  = \Phi(C(B_t = 0) - C(B_t = 1) ) ) $$
 
-The likelihood function is given as
+Where $\Phi$ is the cumulative distribution function for the standard normal distribution. Maximum likelihood estimation chooses parameters that maximize the probability of a the likelihood function. Thereby choosing parameters for $C(B_t)$, that maximize the probability of a certain purchase history of $B_t$. Gonul and Srinivasan initialized values for parameters in cost function and then iterated between the likelihood function and the dynamic program until the parameters in the cost function converged. The likelihood function is given below.
 
 $$\text{Maximize} \prod_{t} Pr({B_t= 1})^{B_t} Pr(B_t=0)^{1-B_t} $$
 
-In the likelihood function $ Pr(B_t=1)$ gets calculated as $\Phi(C(B_t = 0) - C(B_t = 1) ) )$ where $\Phi$ is the cumulative distribution function for the standard normal distribution.
-Gonul and Srinivasan initialized values for parameters in cost function and then iterated between the likelihood function and the dynamic program until the parameters in the cost function converged.
-
 \subsection{Model Specification}
 
-The model in this paper modifies Gonul and Srinivasan's model to use the syndicated data. Instead of modeling purchases as a binary decision, they are based on volumes. In the cost function, essentially the consumer has a target consumption of $\bar{x}$. They incur a penalty for consuming more or less. Having a consumption target allows the consumer to deviate from this target based on prices and consume more during promotions, as expected. The consumer's cost function is given as:
+The model in this paper modifies Gonul and Srinivasan's model to use syndicated data. Instead of modeling purchases as a binary decision, they are based on volumes. In the cost function, essentially consumer have a target consumption of $\bar{x}$. They incur a penalty for consuming more or less. Having a consumption target allows the consumer to deviate from this target based on prices and purchase more during promotions and less afterwards, as expected. The consumer's cost function is given as:
 
 $$ C(x_0) = \alpha_1 (x_1 +x_0 - \bar{x})^2 + p_1 x_1 $$
 
-Like Gonul and Srinivasan's model, the consumer makes a purchase and plans future purchases each time they go to the store based on their current stockpiles, prices, and their expectations for future prices. This leads to the recursive formulation below. Consumers try to minimize costs, which are discounted by $\delta$ in each period:
+Like Gonul and Srinivasan's model, the consumer makes a purchase by trying to minimize the cost associated with that purchase. When calculating these costs, the consumer must consider their future costs based on their current stockpiles, prices, and their expectations for future prices. To calculate future costs, the consumer implicitly forms a plan for future purchases.  This leads to the recursive formulation below. Consumers try to minimize costs, which are discounted by $\delta$ in each period.
 
 $$ \text{Minimize }_{x} \sum_t \delta^t (x_t + x_{t-1} - \bar{x})^2 + p x $$
 
-The two key take aways are (1) Consumers are maximizing over a finite horizon. They can store goods and carry them over to the next periods. More over, they can carry over goods from period to period, so they can 'stock up' on good during a promotion. (2) Consumers do not have perfect access to future prices. If consumers knew the actual future prices, then they would not need to recalculate their consumption plan in each period. They would decide on an optimal consumption plan in the first period and follow it. As a result, the must form expectations for these prices and calculate their plan accordingly. The way consumers form expectations will influence the model's results. Gonul and Srinivasan has consumers guess prices using a Markov process.
+The two key take aways of the dynamic program are (1) Consumers are maximizing over a finite horizon of future periods. They can store goods and carry them over to the next periods. More over, they can carry over goods from period to period, so they can 'stock up' on goods during promotions. (2) Consumers do not have perfect access to future prices. If consumers knew the actual future prices, then they would know their future costs with certainty. They could decide on an optimal purchase plan in the first period and follow it. By forming expectations, the consumer must dynamically adapt when their are unexpected promotions and adjust their plan accordingly. Of course, The way consumers form expectations will influence the model's results. Gonul and Srinivasan use a Markov process to model these expectations.
 
 
 \section{Preliminary Regression Results}
 
-At this stage, the econometric model has been estimated. The biggest predictor of future volumes is past volumes. As we can see in the appendix, using just price, and the previous two weeks of volume explains 88 percent of the variance in volumes. This is not very informative about what firms can do to increase volumes. 
+At this stage, we have estimated various verions of the econometric model. The coefficient on EDP is persistently positive through all of the estimated models. Perhaps having a higher EDP signals that a brand's quality and characteristics making promotions more effective. When the consumers may feel that they get a better value when the price is initially high. We estimated a models without EDP as an explanatory variable. Removing this variable causes the coefficients on group characteristics to slightly increase in magnitude. This supports the theory that EDP carries some information about the quality of the product. If EDP contained information about the product characteristics, the group characteristics would exhibit upward bias without it, increasing the value of these coefficients. Removing this variable also causes the coefficient on price to decrease in magnitude.
 
-Estimating a log linear model (i.e. $log(VOL)$) reveals more about the relationship between the other characteristics and volume.The the appendix combines previous volumes with product characteristics to predict future volumes. Its predictive power seems high, but it is misleading considering how highly correlated previous volumes are with future volumes. Using group characteristics and previous prices only explains 25 percent of the variance when viewed by themselves.   This variable can be interpreted as percentage change in volume. It helps distinguish how price and product characteristics contribute to volume changes. 
+In all of these verions, past volumes explain most of the variance in future volumes. As we can see in the appendix, using just price, and the previous two weeks of volume explains 88 percent of the variance in volumes. This is not very informative about what firms can do to increase volumes. Adding  group characteristics and previous prices explains 97 percent of the variance in volumes, but this is misleading considering how highly correlated previous volumes are with future volumes. Using group characteristics and previous prices only explains 25 percent of the variance when viewed by themselves. 
 
-The coefficient on EDP is persistently positive through all of the models we estimated. Perhaps having a higher EDP signals that a brand is producing a higher quality product. We estimated a model without EDP as an explanatory variable. Removing this variable causes most of the coefficients on the group characteristics to slightly increase in magnitude. This supports the theory that EDP carries some information about the quality of the product. If EDP contained information about the product characteristics, the group characteristics would exhibit upward bias without it. Removing this variable also causes the coefficient on price to decrease in magnitude.
+Estimating a log linear model (i.e. $log(VOL)$) reveals more about the relationship between the other characteristics and volume. This variable can be interpreted as percentage change in volume. It helps distinguish how price and product characteristics contribute to volume changes. The the appendix combines previous volumes with product characteristics and EDP to predict future volumes. In addition, we included boolean variables for each of the CTAs. These variables are statistically significant at the five percent levels. When using an F-test for join significance of these variables, they are significant beyond the five percent level. This means that these variables are related to volume changes and should not be taken lightly. 
 
-In addition to these models, we estimated a model including boolean variables for each of the CTAs. These variables are statistically significant at the five percent levels. When using an F-test for join significance of these variables, they are significant at the five percent level. This means that these variables are related to volume changes and should not be taken lightly. 
-
-The mechanism proposed in the literature regarding reference prices may be correct. Previous prices may only be correlated with purchase 'through' their relationship with present prices Previous price has higher p-values than the group characteristics and previous volume. Depending on the model, previous prices may not statistically significant at the five percent level. Running the two stage regression causes the coefficient on price to fall. Additionally, the p-values on the product characteristics increase after running the two stage model.
+Finally, The mechanism proposed in the literature regarding reference prices may be correct. Previous prices may only be correlated with purchase 'through' their relationship with present prices. Previous price has higher p-values than the group characteristics and previous volume. Depending on the model, previous prices may not statistically significant at the five percent level. Running the two stage regression causes the coefficient on price to fall. Additionally, the p-values on the product characteristics increase after running the two stage model.
 
 \section{Conclusion}
 
-This project utilizes multiple approaches to paint a full a picture of consumer behavior in response to EDP changes. The econometric model describes the relationship between various factors and volumes using well established statistical techniques. It is built on the intuition of consumers using prices decreases in the present relative to the past as a psychological heuristic for making purchases. It also builds on the large literature of econometric models trying to predict how price changes internalized by consumers effect product outcomes. In the model, past volumes are the most important statistical factor in explaining future volumes. We isolate the statistical impact of EDP along with brand characteristics on volume changes using a log linear model. Counter-intuitively, EDP is consistently correlated with a positive increase in volume.
+This project utilizes multiple approaches for a full picture of consumer behavior in response to EDP changes. The econometric model describes the relationship between various factors and volumes using well established statistical techniques. It is built on the intuition of consumers use prices decreases as a psychological heuristic for making purchases. It also builds on the large literature of econometric models trying to predict how price changes internalized by consumers effect product outcomes. In the model, past volumes are the most important statistical factor in explaining future volumes. We isolate the statistical impact of EDP along with brand characteristics on volume changes using a log linear model. Counter-intuitively, EDP is consistently correlated with a positive increase in volume.
 
-The dynamic programming model involves a more nuanced approach toward predicting consumer behavior. The model captures the intuition that consumers buy more because they expect future prices to increase next time the visit the store. The reason to use the dynamic program is the tenuous link between causality in the econometric model. It would establish the relationship between past prices and future price. Changes in consumer behavior would be caused by varying EDP in the model. However, the dynamic program makes more assumptions and uses less established techniques to make predictions.
-
-The next steps for this project are building the dynamic programming model and extending it to include multiple brands. Additionally, exploring other mathematical tools like high dimensional model representation can aid this research project. 
+The dynamic programming model is a more involved approach toward. The model captures the intuition that consumers buy more because they expect future prices to increase next time the visit the store. The dynamic program improves on the tenuous link reguarding causality established by the econometric model between past prices and present pruchases. Changes in consumer behavior caused by varying EDP in the dynamic program are more easily attributed to EDP. However, the dynamic program makes more assumptions and uses less established techniques to make predictions. The next steps for this project are building the dynamic programming model and extending it to include multiple brands. Additionally, exploring other mathematical tools like high dimensional model representation can aid this research project. 
 
 \pagebreak
 
